--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "prestart": "node scripts/create-database.js",
     "start": "nodemon -r dotenv/config index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "pretest": "node scripts/create-database.js test" ,
+    "test": "mocha tests/**/*.js --exit --recursive --timeout 60000 --file ./tests/test-setup.js",
+    "posttest": "node scripts/drop-database.js test"
   },
   "repository": {
     "type": "git",
