--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prestart": "node scripts/create-database.js",
     "start": "nodemon -r dotenv/config index.js",
-    "pretest": "node scripts/create-database.js test" ,
+    "pretest": "node scripts/create-database.js test",
     "test": "mocha tests/**/*.js --exit --recursive --timeout 60000 --file ./tests/test-setup.js",
     "posttest": "node scripts/drop-database.js test"
   },
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/George-xixi/book-library#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sequelize": "^6.28.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
